# AutomaticLossWeightingPyTorch

./: .gitignore  LICENSE  README.md  pyproject.toml  weighted_loss.py
.github/workflows/: ci.yml
tests/: test_weighted_loss.py
